--- a/views/pages/site-awesome-hosting.ejs
+++ b/views/pages/site-awesome-hosting.ejs
@@ -66,10 +66,10 @@
     
     <div class="section" id="section-2">
         <div class="section-content">
-            <div class="col-sm-2 col-padding">
-                <i class="fa fa-search"></i>
-                <div>search your</div>
-                <div>domain</div>
+            <div class="col-sm-2">
+                <div class="icon-color"><i class="fa fa-search"></i></div>
+                <div class="section-title">search your</div>
+                <div class="section-title-emph">domain</div>
             </div>
             <div class="col-sm-10 col-padding">
                 <form>
@@ -93,27 +93,58 @@
         <a href="services"></a>
         <div class="section-content">
             <div class="section-title">
-                <div>our</div>
-                <div>benefits</div>
+                <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
+                <div class="section-title">our</div>
+                <div class="section-title-emph">benefits</div>
             </div>
-            <div class="services-list">
+            <div>
                 <div class="col-sm-4 services-columns">
-                    <div class="icon-container" id="serv-tickets"><i class="fa fa-ticket"><span class="icon-text">tickets</span></i></div>
+                    <div class="col-sm-3 icon-container icon-color"><i class="fa fa-thumbs-o-up"></i></div>
+                    <div class="col-sm-9 serv-title">
+                        99.9% Uptime
+                        <div class="serv-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 services-columns">
-                    <div class="icon-container" id="serv-camera"><i class="fa fa-camera"><span class="icon-text">camera</span></i></div>
+                    <div class="col-sm-3 icon-container icon-color"><i class="fa fa-comments"></i></div>
+                    <div class="col-sm-9 serv-title">
+                        24/7/365 Support
+                        <div class="serv-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 services-columns">
-                    <div class="icon-container" id="serv-beer"><i class="fa fa-beer"><span class="icon-text">beer</span></i></div>
+                    <div class="col-sm-3 icon-container icon-color"><i class="fa fa-laptop"></i></div>
+                    <div class="col-sm-9 serv-title">
+                        Protect Your PC
+                        <div class="serv-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 services-columns">
-                    <div class="icon-container" id="serv-devices"><i class="fa fa-tv"><span class="icon-text">devices</span></i></div>
+                    <div class="col-sm-3 icon-container icon-color"><i class="fa fa-gears"></i></div>
+                    <div class="col-sm-9 serv-title">
+                        DNS Control
+                        <div class="serv-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 services-columns">
-                    <div class="icon-container" id="serv-devices"><i class="fa fa-tv"><span class="icon-text">devices</span></i></div>
+                    <div class="col-sm-3 icon-container icon-color"><i class="fa fa-envelope-o"></i></div>
+                    <div class="col-sm-9 serv-title">
+                        Domain Transfer
+                        <div class="serv-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 services-columns">
-                    <div class="icon-container" id="serv-devices"><i class="fa fa-tv"><span class="icon-text">devices</span></i></div>
+                    <div class="col-sm-3 icon-container icon-color"><i class="fa fa-lock"></i></div>
+                    <div class="col-sm-9 serv-title">
+                        100% Security
+                        <div class="serv-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -123,15 +154,17 @@
         <div class="section-content">
             <div class="col-sm-5 col-padding">
                 <div class="section-title">
-                    <div>now</div>
-                    <div>what is hot</div>
+                    <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
+                    <div class="section-title">now</div>
+                    <div class="section-title-emph">what is hot</div>
                 </div>
                 <img style="width: 100%;" src="/images/site-awesome-hosting/offer.png">
             </div>
             <div class="col-sm-7 col-padding">
                 <div class="section-title">
-                    <div>our</div>
-                    <div>features</div>
+                    <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
+                    <div class="section-title">our</div>
+                    <div class="section-title-emph">features</div>
                 </div>
                 <div class="section-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
@@ -144,8 +177,9 @@
     <div class="section" id="section-5">
         <div class="section-content">
             <div class="section-title">
-                <div>our</div>
-                <div>hosting</div>
+                <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
+                <div class="section-title">our</div>
+                <div class="section-title-emph">hosting</div>
             </div>
             <div class="col-sm-3 col-padding">
                 <div>$5 per month</div>
@@ -191,10 +225,10 @@
     </div>
     <div class="section" id="section-6">
         <div class="section-content">
-            <div class="col-sm-2 col-padding">
-                <i class="fa fa-envelope"></i>
-                <div>search your</div>
-                <div>domain</div>
+            <div class="col-sm-2">
+                <div class="icon-color"><i class="fa fa-envelope"></i></div>
+                <div class="section-title">search your</div>
+                <div class="section-title-emph">domain</div>
             </div>
             <div class="col-sm-10 col-padding">
                 <form>
