--- a/views/pages/awesome-hosting/about-us.ejs
+++ b/views/pages/awesome-hosting/about-us.ejs
@@ -2,10 +2,7 @@
 <html lang="en">
 
 <head>
-    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <!--<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>-->
-    <!--<link href='//fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>-->
     <link href='//fonts.googleapis.com/css?family=Sofia' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/stylesheets/site-awesome-hosting.css">
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
@@ -23,10 +20,10 @@
                     Support Register Login
                 </div>
                 <div class="header-links">
-                    <a class="col-sm-1-10 header-link-single current" href="#home">
+                    <a class="col-sm-1-10 header-link-single" href="/awesome-hosting">
                         <span>home</span>
                     </a>
-                    <a class="col-sm-1-10 header-link-single" href="/awesome-hosting/about-us">
+                    <a class="col-sm-1-10 header-link-single current" href="/awesome-hosting/about-us">
                         <span>about us</span>
                     </a>
                     <a class="col-sm-1-10 header-link-single" href="#section-2">
@@ -59,17 +56,17 @@
 
     <div class="section" id="section-1">
         <div class="section-content clearfix">
-            <div class="section-main-title">Awesome Hosting</div>
-            <div class="section-sub-title">with unlimited features</div>
+            <div class="section-main-title">about us</div>
+            <div class="section-sub-title">what we are</div>
         </div>
     </div>
     
     <div class="section" id="section-2">
         <div class="section-content">
             <div class="col-sm-2">
-                <div class="icon-color"><i class="fa fa-search"></i></div>
-                <div class="section-title">search your</div>
-                <div class="section-title-emph">domain</div>
+                <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
+                <div class="section-title">our</div>
+                <div class="section-title-emph">details</div>
             </div>
             <div class="col-sm-10 col-padding">
                 <form>
@@ -94,8 +91,8 @@
         <div class="section-content">
             <div class="section-title">
                 <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
-                <div class="section-title">our</div>
-                <div class="section-title-emph">benefits</div>
+                <div class="section-title">special</div>
+                <div class="section-title-emph">offers</div>
             </div>
             <div>
                 <div class="col-sm-4 services-columns">
@@ -155,8 +152,8 @@
             <div class="col-sm-5 col-padding">
                 <div class="section-title">
                     <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
-                    <div class="section-title">now</div>
-                    <div class="section-title-emph">what is hot</div>
+                    <div class="section-title">meet</div>
+                    <div class="section-title-emph">our team</div>
                 </div>
                 <img style="width: 100%;" src="/images/site-awesome-hosting/offer.png">
             </div>
@@ -176,74 +173,15 @@
     </div>
     <div class="section" id="section-5">
         <div class="section-content">
-            <div class="section-title">
-                <div class="icon-color"><i class="fa fa-ellipsis-h"></i></div>
-                <div class="section-title">our</div>
-                <div class="section-title-emph">hosting</div>
-            </div>
-            <div class="col-sm-3 col-padding">
-                <div>$5 per month</div>
-                <div>Standard Plan</div>
-                <div>10GB Disk Space</div>
-                <div>1TB Bandwidth</div>
-                <div>Free DDoS Protection</div>
-                <div>Free Daily Backups</div>
-                <div>Managed Hosting</div>
-                <div>SIGNUP</div>
-            </div>
-            <div class="col-sm-3 col-padding">
-                <div>$6 per month</div>
-                <div>Standard Plan</div>
-                <div>10GB Disk Space</div>
-                <div>1TB Bandwidth</div>
-                <div>Free DDoS Protection</div>
-                <div>Free Daily Backups</div>
-                <div>Managed Hosting</div>
-                <div>SIGNUP</div>
-            </div>
-            <div class="col-sm-3 col-padding">
-                <div>$8 per month</div>
-                <div>Standard Plan</div>
-                <div>10GB Disk Space</div>
-                <div>1TB Bandwidth</div>
-                <div>Free DDoS Protection</div>
-                <div>Free Daily Backups</div>
-                <div>Managed Hosting</div>
-                <div>SIGNUP</div>
-            </div>
-            <div class="col-sm-3 col-padding">
-                <div>$9 per month</div>
-                <div>Standard Plan</div>
-                <div>10GB Disk Space</div>
-                <div>1TB Bandwidth</div>
-                <div>Free DDoS Protection</div>
-                <div>Free Daily Backups</div>
-                <div>Managed Hosting</div>
-                <div>SIGNUP</div>
-            </div>
-        </div>
-    </div>
-    <div class="section" id="section-6">
-        <div class="section-content">
             <div class="col-sm-2">
                 <div class="icon-color"><i class="fa fa-envelope"></i></div>
-                <div class="section-title">search your</div>
-                <div class="section-title-emph">domain</div>
+                <div class="section-title">sign up for your</div>
+                <div class="section-title-emph">newsletter</div>
             </div>
             <div class="col-sm-10 col-padding">
                 <form>
                     <input type="text" placeholder="Enter your domain name">
-                    <select>
-                        <option value="year0">Year 0-1</option>
-                        <option value="year2">Year 1-2</option>
-                        <option value="yearMax">Year 2+</option>
-                    </select>
-                    <select>
-                        <option value="com">.com</option>
-                        <option value="org">.org</option>
-                        <option value="biz">.biz</option>
-                    </select>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Sign Up Now">
                 </form>
             </div>
         </div>
