added viewport for responsive view

--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/stylesheets/app-cuda.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/images/vanillabeanbag-32x32.png" sizes="32x32">
 </head>
 
