fixes to responsive styling, use col-size-*, etc.

--- a/public/stylesheets/app-cuda.css
+++ b/public/stylesheets/app-cuda.css
@@ -25,9 +25,9 @@ ul{
     text-transform: uppercase;
 }
 
-/*.clearfix{*/
-/*    overflow: auto;*/
-/*}*/
+.clearfix{
+    overflow: auto;
+}
 .cuda-page {
     padding-top: 118px;
     padding-bottom: 108px;
@@ -65,16 +65,13 @@ ul{
 }
 .list-projects{
     list-style-type: none;
-    display: inline-block;
-    width: 440px;
+    /*display: inline-block;*/
+    /*width: 440px;*/
     margin-top: 60px;
-    margin-left: 10px;
-    margin-right: 10px;
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
     /*outline: 1px dashed black;*/
-}
-.list-projects div{
-    margin-top: 20px;
-    font-weight: bold;
+    overflow: auto;
 }
 .list-projects img{
     max-width: 100%;
@@ -82,11 +79,6 @@ ul{
 
 .list-services{
     list-style-type: none;
-    display: inline-block;
-    width: 260px;
-    margin-top: 60px;
-    margin-right: 10px;
-    /*outline: 1px dashed black;*/
 }
 .list-services-title{
     margin-top: 54px;
@@ -101,11 +93,6 @@ ul{
 }
 .list-skills{
     list-style-type: none;
-    display: inline-block;
-    width: 260px;
-    margin-top: 60px;
-    margin-right: 10px;
-    /*outline: 1px dashed black;*/
 }
 .list-skills > img {
     margin-bottom: 28px;
@@ -117,7 +104,7 @@ ul{
 .list-team{
     list-style-type: none;
     display: inline-block;
-    width: 260px;
+    /*width: 260px;*/
     margin-top: 60px;
     margin-right: 5px;
     margin-left: 5px;
@@ -169,41 +156,13 @@ ul{
 }
 .list-testimonials{
     list-style-type: none;
-    display: inline-block;
-    float: left;
-    text-align: left;
-    width: 550px;
-    height: 120px;
     margin-top: 60px;
-    /*margin-left: 10px;*/
-    /*margin-right: 20px;*/
-    padding-left: 10px;
-    padding-right: 10px;
-    /*outline: 1px dashed black;*/
+    text-align: left;
 }
 .list-testimonials img{
-    /*display: block;*/
-    float: left;
-    margin-right: 20px;
-    max-width: 20%;
+    width: 100%;
     border-radius: 100%;
 }
-.message-substance{
-    margin-top: 10px;
-}
-.message-substance:nth-child(1){
-    margin-top: 60px;
-    margin-right: 7px;
-    width: 49%;
-}
-.message-substance:nth-child(2){
-    width: 49%;
-}
-.message-substance:nth-child(3){
-    max-width: 100%;
-    height: 10em;
-}
-
 .nav-list:hover{
     background-color:#4d2f5c;
     cursor:pointer;
@@ -223,12 +182,13 @@ ul{
 }
 .portfolio-list{
     display: inline-block;
-    text-align: center;
+    /*text-align: center;*/
     background-color: #ebc985;
     color: #393939;
     width: 80px;
     border-radius: 5px;
     padding: 2px;
+    margin-top: 20px;
     font-weight: bold;
 }
 .portfolio-list:hover{
@@ -321,12 +281,14 @@ ul{
 }
 
 #cuda-in-touch .message-substance{
+    margin-top: 10px;
     padding: 1em;
     background-color: #273a71;
     color: #ffffff;
     border-radius: 5px;
     border: 0px;
     font-weight: bold;
+    width: 100%;
 }
 
 #cuda-other-sites{
