--- a/views/pages/site-cuda.ejs
+++ b/views/pages/site-cuda.ejs
@@ -47,7 +47,7 @@
                 to create awesome websites and applications.
             </h2>
             <div>
-                <li class="list-services" id="services-brand">
+                <div class="list-services col-md-3 col-sm-6" id="services-brand">
                     <img src="images/site-cuda/services-flag.png">
                     <div class="list-services-title uppercase">
                         Branding
@@ -55,8 +55,8 @@
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
-                </li>
-                <li class="list-services" id="services-design">
+                </div>
+                <div class="list-services col-md-3 col-sm-6" id="services-design">
                     <img src="images/site-cuda/services-pencil.png">
                     <div class="list-services-title uppercase">
                         design
@@ -64,8 +64,8 @@
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
-                </li>
-                <li class="list-services" id="services-dev">
+                </div>
+                <div class="list-services col-md-3 col-sm-6" id="services-dev">
                     <img src="images/site-cuda/services-gear.png">
                     <div class="list-services-title uppercase">
                         development
@@ -73,8 +73,8 @@
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
-                </li>
-                <li class="list-services" id="services-rocket">
+                </div>
+                <div class="list-services col-md-3 col-sm-6" id="services-rocket">
                     <img src="images/site-cuda/services-rocket.png">
                     <div class="list-services-title uppercase">
                         rocket science
@@ -82,7 +82,7 @@
                     <div class="list-services-description">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
                     </div>
-                </li>
+                </div>
             </div>
         </div>
     </div>
@@ -97,7 +97,7 @@
                 We are a small team of designers and developers, who help brands with big ideas.
             </h2>
             <div>
-                <li class="list-team" id="team-person">
+                <div class="col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Anne Hathaway
@@ -122,8 +122,9 @@
                             <div class="contact-icon"><i class="fa fa-envelope"></i></div>
                         </li>
                     </ul>
-                </li>
-                <li class="list-team" id="team-person">
+                    <img class="title-line" src="images/site-cuda/team-line.png">
+                </div>
+                <div class="col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Kate Upton
@@ -145,8 +146,9 @@
                             <div class="contact-icon"><i class="fa fa-envelope"></i></div>
                         </li>
                     </ul>
-                </li>
-                <li class="list-team" id="team-person">
+                    <img class="title-line" src="images/site-cuda/team-line.png">
+                </div>
+                <div class="col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Olivia Wilde
@@ -171,8 +173,9 @@
                             <div class="contact-icon"><i class="fa fa-envelope"></i></div>
                         </li>
                     </ul>
-                </li>
-                <li class="list-team" id="team-person">
+                    <img class="title-line" src="images/site-cuda/team-line.png">
+                </div>
+                <div class="col-md-3 col-sm-6">
                     <img src="images/site-cuda/profile-holder.png">
                     <div class="list-team-name uppercase">
                         Ashley Greene
@@ -194,7 +197,8 @@
                             <div class="contact-icon"><i class="fa fa-envelope"></i></div>
                         </li>
                     </ul>
-                </li>
+                    <img class="title-line" src="images/site-cuda/team-line.png">
+                </div>
             </div>
         </div>
     </div>
@@ -210,25 +214,25 @@
                 tempor incididunt ut labore et dolore magna aliqua.
             </h2>
             <div>
-                <li class="list-skills">
+                <li class="list-skills col-md-3 col-sm-6">
                     <img src="images/site-cuda/skills-des.png">
                     <div>
                     Web Design
                     </div>
                 </li>
-                <li class="list-skills">
+                <li class="list-skills col-md-3 col-sm-6">
                     <img src="images/site-cuda/skills-web.png">
                     <div>
                     HTML / CSS    
                     </div>
                 </li>
-                <li class="list-skills">
+                <li class="list-skills col-md-3 col-sm-6">
                     <img src="images/site-cuda/skills-graphic.png">
                     <div>
                     Graphic Design    
                     </div>
                 </li>
-                <li class="list-skills">
+                <li class="list-skills col-md-3 col-sm-6">
                     <img src="images/site-cuda/skills-ui.png">
                     <div>
                     UI / UX
@@ -248,38 +252,38 @@
                 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet<br>
                 consectetur, adipisci velit, sed quia non numquam
             </h2>
-            <div>
-                <div class="portfolio-list uppercase" id="portfolio-list-web">all</div>
-                <div class="portfolio-list uppercase" id="portfolio-list-all">web</div>
-                <div class="portfolio-list uppercase" id="portfolio-list-icons">apps</div>
-                <div class="portfolio-list uppercase" id="portfolio-list-apps">icons</div>
+            <div class="clearfix">
+                <div class="portfolio-list uppercase">all</div>
+                <div class="portfolio-list uppercase">web</div>
+                <div class="portfolio-list uppercase">apps</div>
+                <div class="portfolio-list uppercase">icons</div>
             </div>
-            <ul>
-                <li class="list-projects">
+            <div class="clearfix">
+                <div class="list-projects col-md-6">
                     <img src="images/site-cuda/profile-perspective.png">
                     <div class="uppercase">
                     isometric perspective mock-up
                     </div>
-                </li>
-                <li class="list-projects">
+                </div>
+                <div class="list-projects col-md-6">
                     <img src="images/site-cuda/profile-ui.png">
                     <div class="uppercase">
                     time zone app ui
                     </div>
-                </li>
-                <li class="list-projects">
+                </div>
+                <div class="list-projects col-md-6">
                     <img src="images/site-cuda/profile-viro.png">
                     <div class="uppercase">
                     viro media players ui  
                     </div>
-                </li>
-                <li class="list-projects">
+                </div>
+                <div class="list-projects col-md-6">
                     <img src="images/site-cuda/profile-blog.png">
                     <div class="uppercase">
                     blog / magazine flat UI kit
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
             <div class="link-box uppercase">load more projects</div>
         </div>
     </div>
@@ -293,10 +297,12 @@
             <h2>
                 Our clients love us!
             </h2>
-            <ul>
-                <li class="list-testimonials">
+            <div class="testimonials">
+                <li class="list-testimonials col-md-6">
+                    <div class="col-md-3">
                     <img src="images/site-cuda/profile-holder.png">
-                    <div>
+                    </div>
+                    <div class="col-md-9">
                         <div class="quote-text">
                         “Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”
                         </div>
@@ -308,9 +314,11 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-testimonials">
+                <li class="list-testimonials col-md-6">
+                    <div class="col-md-3">
                     <img src="images/site-cuda/profile-holder.png">
-                    <div>
+                    </div>
+                    <div class="col-md-9">
                         <div class="quote-text">
                         “Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”
                         </div>
@@ -322,9 +330,11 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-testimonials">
+                <li class="list-testimonials col-md-6">
+                    <div class="col-md-3">
                     <img src="images/site-cuda/profile-holder.png">
-                    <div>
+                    </div>
+                    <div class="col-md-9">
                         <div class="quote-text">
                         “Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”
                         </div>
@@ -336,9 +346,11 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-testimonials">
+                <li class="list-testimonials col-md-6">
+                    <div class="col-md-3">
                     <img src="images/site-cuda/profile-holder.png">
-                    <div>
+                    </div>
+                    <div class="col-md-9">
                         <div class="quote-text">
                         “Phasellus non purus vel arcu tempor commodo. Fusce semper, purus vel luctus molestie, risus sem cursus neque.”
                         </div>
@@ -350,7 +362,7 @@
                         </div>
                     </div>
                 </li>
-            </ul>
+            </div>
         </div>
     </div>
 
@@ -363,10 +375,16 @@
             <h2>
                 1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
             </h2>
-            <form style="width: 540px; text-align: left;">
-                <input class="message-substance" type="text" name="contact-name" placeholder="Your Name *" required></input>
-                <input class="message-substance" type="text" name="contact-email" placeholder="Your Email *" required></input>
-                <textarea rows="4" class="message-substance" style="width:100%;" name="contact-message" placeholder="Your Message *" required></textarea>
+            <form style="max-width: 540px; text-align: left;" class="clearfix">
+                <div class="col-md-6 col-sm-12">
+                    <input class="message-substance" type="text" name="contact-name" placeholder="Your Name *" required></input>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <input class="message-substance" type="text" name="contact-email" placeholder="Your Email *" required></input>
+                </div>
+                <div class="col-md-12">
+                <textarea class="message-substance" rows="4" style="width:100%;" name="contact-message" placeholder="Your Message *" required></textarea>
+                </div>
                 <!--<input class="message-substance" style="width:100%;" type="text" name="contact-message" placeholder="Your Message *" required></input>-->
             </form>
             <div class="link-box uppercase">send message</div>
